@@ -1046,8 +1046,8 @@ public final class UtilProperties implements Serializable {
                 UtilResourceBundle parentBundle = null;
                 int numProperties = 0;
                 while (!candidateLocales.isEmpty()) {
-                    // REFACTOR: Use sequenced collection method instead
-                    Locale candidateLocale = candidateLocales.remove(candidateLocales.size() - 1);
+                    // REFACTO: Use sequenced collection method instead
+                    Locale candidateLocale = candidateLocales.removeLast();
                     // ResourceBundles are connected together as a singly-linked list
                     String lookupName = createResourceName(resource, candidateLocale, true);
                     UtilResourceBundle lookupBundle = BUNDLE_CACHE.get(lookupName);
