@@ -604,11 +604,11 @@ public final class TransactionUtil implements Status {
 
     protected static void pushSuspendedTransaction(Transaction t) {
         List<Transaction> tl = getSuspendedTxStack();
-        // REFACTOR: Use sequenced collection method instead
-        tl.add(0, t);
+        // REFACTO: Use sequenced collection method instead
+        tl.addFirst(t);
         List<Exception> stls = getSuspendedTxLocationsStack();
-        // REFACTOR: Use sequenced collection method instead
-        stls.add(0, new Exception("TX Suspend Location"));
+        // REFACTO: Use sequenced collection method instead
+        stls.addFirst(new Exception("TX Suspend Location"));
         // save the current transaction start stamp
         pushTransactionStartStamp(t);
     }
@@ -620,11 +620,11 @@ public final class TransactionUtil implements Status {
             popTransactionStartStamp();
             List<Exception> stls = suspendedTxLocationStack.get();
             if (UtilValidate.isNotEmpty(stls)) {
-                // REFACTOR: Use sequenced collection method instead
-                stls.remove(0);
+                // REFACTO: Use sequenced collection method instead
+                stls.removeFirst();
             }
-            // REFACTOR: Use sequenced collection method instead
-            return tl.remove(0);
+            // REFACTO: Use sequenced collection method instead
+            return tl.removeFirst();
         }
         return null;
     }
